--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-app",
+    "name": "react-shopweb",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://dan870627.github.io/react-shopweb/docs/index",
